<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="Letrinhas">letrinhas</string>
    <string name="app_name">Letrinhas</string>
    <string name="title_activity_view_more_info">Ver mais Informação</string>
    <string name="title_all_tests">Ver mais Informação</string>
    <string name="action_settings">Definições</string>
    <string name="hello_world">Hello world!</string>
    <string name="btnback">Voltar</string>
    <string name="title_activity_all__tests">Todos os Testes</string>
    <string name="btnMainAllTest">Todos os Testes</string>
    <string name="btnMainSendResult">Criar e enviar Resultado de Teste</string>
    <string name="btnSendResult">Enviar Resultado</string>
    <string name="title_activity_send__result_test">Enviar Resultado de Teste</string>
    <string name="lb_mainIpServidor">IP do Servidor:</string>
    <string name="mainPorta">Porta:</string>
    <string name="title_activity_receber_imagem">ReceberImagem</string>
    <string name="btnReceberImagem">Ver imagem da BD Profs</string>
    <string name="title_activity_reprod_audio">ReprodAudio</string>
    <string name="title_activity_main_bd">MainBD</string>

</resources>