<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <!-- Sample Dashboard screen with Two buttons -->

    <ImageView
        android:id="@+id/imgView1"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/txtTituloImageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.65"
        android:text="@string/lb_mainIpServidor"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtBoxIpServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="code.dei.estt.ipt.pt" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainPorta"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtBoxPorta"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="80" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnViewProducts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dip"
        android:layout_weight="0.45"
        android:text="@string/btnMainAllTest" />

    <Button
        android:id="@+id/btnReceberImagem"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dip"
        android:layout_weight="0.45"
        android:text="@string/btnReceberImagem" />

    <Button
        android:id="@+id/btnSendResult"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dip"
        android:layout_weight="1.45"
        android:text="@string/btnMainSendResult" />

</LinearLayout>